# westiny

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  NETWORK-TESTING.md  README.md
client/: Cargo.toml
client/assets/: client_network.ron  input.ron  spritesheet.ron
client/src/: bindings.rs  lib.rs  main.rs  test_helpers.rs
client/src/components/: mod.rs  weapon_info.rs
client/src/entities/: mod.rs  player.rs  tilemap.rs
client/src/resources/: audio.rs  groundtile.rs  hud.rs  message_panel.rs  mod.rs  network_stream_id.rs  notification_bar.rs  sprite_resource.rs
client/src/states/: connection.rs  game_states.rs  mod.rs  play.rs
client/src/systems/: audio_player.rs  camera.rs  camera_movement.rs  client_connect.rs  cursor_pos_update.rs  health.rs  hud.rs  hud_update.rs  input_state.rs  mod.rs  network_entity_delete.rs  network_entity_update.rs  network_messenger.rs  notification_bar.rs  player_update.rs  shooter.rs  sprite.rs
common/: Cargo.toml
common/proptest-regressions/: serialization.txt
common/src/: collision.rs  lib.rs  metric_dimension.rs  network.rs  serialization.rs  test_helpers.rs  utilities.rs
common/src/components/: bounding_circle.rs  damage.rs  eliminate.rs  gun_holster.rs  health.rs  input.rs  mod.rs  network_id.rs  player.rs  projectile.rs  respawn.rs  sprite_id.rs  time_limit.rs  velocity.rs  weapon.rs
common/src/entities/: barrel.rs  bullet.rs  mod.rs
common/src/events/: damage.rs  entity_delete.rs  events.rs  mod.rs  westiny_event.rs
common/src/resources/: audio.rs  collision.rs  cursor_pos.rs  map.rs  mod.rs  network.rs  weapon.rs
common/src/systems/: collision.rs  entity_delete.rs  health.rs  lifespan.rs  mod.rs  physics.rs  timing.rs
resources/: client_network.ron  display_config.ron  input.ron  protocol.ron  server_network.ron  spritesheet.ron
resources/assets/weapons/: revolver.ron  rifle.ron  shotgun.ron
resources/map/: rust2.wmap
resources/ui/: hud.ron
server/: Cargo.toml
server/src/: diagnostics.rs  lib.rs  main.rs  server_state.rs
server/src/ai/: mod.rs
server/src/components/: client.rs  mod.rs
server/src/entities/: bullet.rs  mod.rs
server/src/resources/: client_registry.rs  collision.rs  event.rs  mod.rs  network_id_supplier.rs  network_stream_id.rs
server/src/systems/: client_introduction.rs  collision.rs  command_transformer.rs  damage.rs  death.rs  entity_delete_broadcaster.rs  entity_state_broadcaster.rs  health.rs  mod.rs  monster_spawn.rs  network_messenger.rs  physics.rs  player_movement.rs  player_spawn.rs  shooter.rs  spawn.rs
src/: assets.rs  board.rs  client.rs  events.rs  lib.rs  main.rs  network.rs  player.rs  server.rs  size.rs  state.rs  test_helpers.rs  utilities.rs
src/components/: distance_limit.rs  health.rs  mod.rs  player.rs  velocity.rs  weapon.rs
src/entities/: bg.rs  bullet.rs  mod.rs  player.rs  tilemap.rs
src/entity/: mod.rs  player.rs
src/resources/: audio.rs  cursor_pos.rs  groundtile.rs  mod.rs  network.rs  sprite_resource.rs
src/states/: client_states.rs  connection.rs  game_states.rs  mod.rs  server_states.rs
src/systems/: camera_movement.rs  client_connect.rs  collision.rs  cursor_pos_update.rs  damage.rs  input_debug.rs  input_state.rs  mod.rs  mouse_debug.rs  physics.rs  player_movement.rs  player_shooter.rs  server_network.rs  sound.rs
src/tile/: barren_land.rs  mod.rs
test/: Cargo.toml
test/src/: lib.rs
