[package]
name = "westiny"
version = "0.1.0"
authors = ["Domonkos Suranyi <domonkos.suranyi@protonmail.com>"]
edition = "2018"

[dependencies]
westiny_common = { path = "common" }
westiny_server = { path = "server" }
westiny_client = { path = "client" }
amethyst = "0.15.3"
amethyst_test = "0.15.3"
array-init = "1.0.0"
log = "0.4.11"
serde = "1.0.120"
derive-new = "0.5.8"
thiserror = "1.0.23"
anyhow = "1.0.38"

[features]
default = ["vulkan", "tiles"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
tiles = ["amethyst/tiles"]

[[bin]]
name = "westiny_server"
path = "src/server.rs"

[workspace]
members = [ ".", "server", "common" ]
# Add everything to default-members as well, e.g. cargo test will execute them as well.
default-members = [ ".", "server", "common" ]
