[package]
name = "westiny"
version = "0.1.0"
authors = ["Domonkos Suranyi <domonkos.suranyi@protonmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

[workspace]
members = [ ".", "server", "common"]
# Add everything to default-members as well, e.g. cargo test will execute them as well.
default-members = [ ".", "server", "common"]
