[package]
name = "westiny_client"
version = "0.2.0"
authors = ["Abel Suranyi"]
edition = "2021"

[dependencies]
westiny_common = { path = "../common" }
bevy = "0.6.0"
serde = "1.0.133"
anyhow = "1.0.52"
derive-new = "0.5.9"
log = "0.4.14"
#blaminar = { git = "https://github.com/westinygame/blaminar", rev = "v0.2.0"}
blaminar = { path = "../../blaminar"}

[dev-dependencies]
westiny_test = { path = "../test"}
w-bevy_test = { git = "https://github.com/westinygame/w-bevy_test", rev = "f84c815f3864a769288a62c09ec4677ed77eb168" }
