[package]
name = "westiny_client"
version = "0.2.0"
authors = ["Abel Suranyi"]
edition = "2021"

[dependencies]
westiny_common = { path = "../common" }
bevy = "0.9.1"
serde = "1.0.133"
anyhow = "1.0.52"
derive-new = "0.5.9"
log = "0.4.14"
blaminar = { git = "https://github.com/westinygame/blaminar", rev = "v0.4.1" }
bevy_ecs_tilemap = "0.9.0"
# TODO somehow make bevy-inspector-egui build only when debugging
bevy-inspector-egui = "0.15.0"

[dev-dependencies]
westiny_test = { path = "../test"}
w-bevy_test = { git = "https://github.com/westinygame/w-bevy_test", rev = "v0.3.0" }

[features]
debug = []
